[tool.poetry]
name = "ringbuffer"
version = "0.1.0"
description = "Single producer single consumer lock free ringbuffer backed by an anonymous memory mapped file"
authors = ["Simon StJG <Simon.StJG@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
